Fix form styling on iOS Safari

--- a/css/forms.css
+++ b/css/forms.css
@@ -2,6 +2,7 @@ input,
 textarea,
 button,
 .button {
+  -webkit-appearance: none;
   appearance: none;
   font: inherit;
   border: 0.1em solid var(--dark);
